<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.berke.databaseloginregister.LoginActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginUsernameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="78dp">

            <EditText
                android:id="@+id/loginUsernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_login_hin_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:layout_below="@+id/loginUsernameInputLayout"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/loginPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_login_hint_text"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginPasswordInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:text="@string/login_button_text" />

        <Button
            android:id="@+id/goToRegisterPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:text="@string/login_to_register_button_text" />

        <TextView
            android:id="@+id/statusOfLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goToRegisterPageButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/status_of_login_page" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
