<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.berke.databaseloginregister.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/regUsernameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="88dp">

            <EditText
                android:id="@+id/regUsernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/regEmailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/regUsernameInputLayout"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/regEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/regUsernameInputLayout"
                android:layout_marginTop="11dp"
                android:layout_weight="1"
                android:hint="@string/e_mail_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/regPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regEmailInputLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/regPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regPasswordInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/sign_up_button_name" />

        <Button
            android:id="@+id/linkToLoginPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:background="@android:color/white"
            android:text="@string/back_to_register_page_text"
            android:textAllCaps="false"
            android:visibility="visible"
            android:layout_below="@+id/registerButton"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/statusOfRegisterPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linkToLoginPageButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
