<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.berke.databaseloginregister.AfterLoginActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/findLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_button_text"
            android:textAllCaps="false"
            android:layout_above="@+id/goToMoviesButton"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="48dp" />

        <Button
            android:id="@+id/goToMoviesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAllCaps="false"
            android:text="@string/go_to_movies_button_text" />

        <Button
            android:id="@+id/onlyAdminButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAllCaps="false"
            android:text="@string/admin_button_text"
            android:layout_below="@+id/goToMoviesButton"
            android:visibility="invisible"
            android:layout_alignEnd="@+id/findLocationButton" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
